[package]
name = "ufo-catch-man"
version = "0.1.0"
authors = ["Hagi013 <generativepassion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {  version = "0.10.0-alpha.2", features = ["json"] }
tokio = { version = "0.2.0-alpha.6" }
rusoto_core = "0.42.0"
rusoto_s3 = "0.42.0"
serde = { version = "^1.0.103", features = ["derive"] }
serde_json = "^1.0.42"
chrono = "0.4.10"
bytes = "0.4.12"
clippy = { version = "*", optional = true }